--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -19,6 +19,10 @@
     font-size: 1.2rem;
     border: 2px solid #ccc;
     border-radius: 4px;
+    font-family: "Raleway", sans-serif;
     font-weight: 100;
+  }
+  input[type="submit"] {
+    font-family: "Raleway", sans-serif;
   }
 }
