--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -30,6 +30,10 @@
   color: $primary-color;
 }
 
+.round-img {
+  border-radius: 50%;
+}
+
 //Buttons
 .btn {
   display: inline-block;
@@ -93,6 +97,30 @@
   &-white {
     @include set-background(#fff);
     border: #ccc 1px solid;
+  }
+}
+
+// Alert
+.alert {
+  display: flex;
+  padding: 0.8rem;
+  margin: 1rem;
+  justify-content: center;
+  opacity: 0.9;
+  background: $light-color;
+  color: #333;
+
+  &.alert-primary {
+    @include set-background($primary-color);
+  }
+  &.alert-dark {
+    @include set-background($dark-color);
+  }
+  &.alert-success {
+    @include set-background($success-color);
+  }
+  &.alert-danger {
+    @include set-background($danger-color);
   }
 }
 
