--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway", sans-serif !important;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #fff;
@@ -71,5 +71,77 @@ img {
     align-items: center;
     justify-content: center;
     text-align: center;
+  }
+}
+
+// Profiles Page
+
+.profile {
+  display: grid;
+  grid-template-columns: 2fr 4fr 2fr;
+  align-items: center;
+  grid-gap: 2rem;
+  padding: 1rem;
+  line-height: 1.8;
+  margin-bottom: 1rem;
+}
+
+// Profile page
+
+.profile-grid {
+  display: grid;
+  grid-template-areas:
+    "top top"
+    "about about"
+    "exp edu"
+    "github github";
+  grid-gap: 1rem;
+  .profile-top {
+    grid-area: top;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    img {
+      width: 250px;
+    }
+    .icons {
+      color: #fff;
+      margin: 0 0.3rem;
+      a {
+        color: white;
+        &:hover {
+          transition: 0.2sec ease-out;
+          color: $dark-color;
+        }
+      }
+    }
+  }
+  .line {
+    height: 1px;
+    background: #ccc;
+    margin: 1.5rem 0;
+  }
+  .profile-about {
+    grid-area: about;
+    text-align: center;
+    .ul-wrapper {
+      ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+    }
+  }
+  .profile-exp {
+    grid-area: exp;
+  }
+  .profile-edu {
+    grid-area: edu;
+  }
+  .profile-github {
+    grid-area: github;
   }
 }
