--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,10 @@
   color: #17a2b8;
 }
 
+.round-img {
+  border-radius: 50%;
+}
+
 .btn {
   display: inline-block;
   background: #f4f4f4;
@@ -287,7 +291,7 @@
 }
 .btn.btn-primary:hover {
   background-color: #36cee6;
-  color: #333;
+  color: #fff;
 }
 .btn.btn-dark {
   background-color: #343a40;
@@ -303,11 +307,11 @@
 }
 .btn.btn-success:hover {
   background-color: #48d368;
-  color: #333;
+  color: #fff;
 }
 .btn.btn-danger {
   background-color: #dc3545;
-  color: #333;
+  color: #fff;
 }
 .btn.btn-danger:hover {
   background-color: #e77681;
@@ -337,12 +341,38 @@
 }
 .bg-danger {
   background-color: #dc3545;
-  color: #333;
+  color: #fff;
 }
 .bg-white {
   background-color: #fff;
   color: #333;
   border: #ccc 1px solid;
+}
+
+.alert {
+  display: flex;
+  padding: 0.8rem;
+  margin: 1rem;
+  justify-content: center;
+  opacity: 0.9;
+  background: #f4f4f4;
+  color: #333;
+}
+.alert.alert-primary {
+  background-color: #17a2b8;
+  color: #fff;
+}
+.alert.alert-dark {
+  background-color: #343a40;
+  color: #fff;
+}
+.alert.alert-success {
+  background-color: #28a745;
+  color: #fff;
+}
+.alert.alert-danger {
+  background-color: #dc3545;
+  color: #fff;
 }
 
 .dark-overlay {
@@ -374,7 +404,11 @@
   font-size: 1.2rem;
   border: 2px solid #ccc;
   border-radius: 4px;
+  font-family: "Raleway", sans-serif;
   font-weight: 100;
+}
+.form input[type=submit] {
+  font-family: "Raleway", sans-serif;
 }
 
 * {
@@ -384,7 +418,7 @@
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway", sans-serif !important;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #fff;
@@ -443,4 +477,66 @@ img {
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+.profile {
+  display: grid;
+  grid-template-columns: 2fr 4fr 2fr;
+  align-items: center;
+  grid-gap: 2rem;
+  padding: 1rem;
+  line-height: 1.8;
+  margin-bottom: 1rem;
+}
+
+.profile-grid {
+  display: grid;
+  grid-template-areas: "top top" "about about" "exp edu" "github github";
+  grid-gap: 1rem;
+}
+.profile-grid .profile-top {
+  grid-area: top;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.profile-grid .profile-top img {
+  width: 250px;
+}
+.profile-grid .profile-top .icons {
+  color: #fff;
+  margin: 0 0.3rem;
+}
+.profile-grid .profile-top .icons a {
+  color: white;
+}
+.profile-grid .profile-top .icons a:hover {
+  transition: 0.2sec ease-out;
+  color: #343a40;
+}
+.profile-grid .line {
+  height: 1px;
+  background: #ccc;
+  margin: 1.5rem 0;
+}
+.profile-grid .profile-about {
+  grid-area: about;
+  text-align: center;
+}
+.profile-grid .profile-about .ul-wrapper ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.profile-grid .profile-exp {
+  grid-area: exp;
+}
+.profile-grid .profile-edu {
+  grid-area: edu;
+}
+.profile-grid .profile-github {
+  grid-area: github;
 }/*# sourceMappingURL=style.css.map */
