--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -124,6 +124,41 @@
   }
 }
 
+// Badges
+.badge {
+  font-size: 0.8rem;
+  padding: 0.1rem;
+  text-align: center;
+  margin: 0.3rem;
+  background-color: $light-color;
+  color: #333;
+
+  &.badge-primary {
+    @include set-background($primary-color);
+  }
+  &.badge-dark {
+    @include set-background($dark-color);
+  }
+  &.badge-success {
+    @include set-background($success-color);
+  }
+  &.badge-danger {
+    @include set-background($danger-color);
+  }
+}
+
+// Table
+.table {
+  th,
+  td {
+    padding: 1rem;
+    text-align: left;
+  }
+  th {
+    background-color: $light-color;
+  }
+}
+
 .dark-overlay {
   height: 100%;
   width: 100%;
