--- a/scss/style.scss
+++ b/scss/style.scss
@@ -141,7 +141,31 @@ img {
   .profile-edu {
     grid-area: edu;
   }
+  .profile-exp,
+  .profile-edu {
+    & > div {
+      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+      border-bottom: #ccc 1px dotted;
+      &:last-child {
+        border: none;
+      }
+    }
+  }
   .profile-github {
     grid-area: github;
+
+    .repo {
+      display: flex;
+      & > div:first-child {
+        flex: 7;
+        flex-basis: 70%;
+      }
+
+      & > div:last-child {
+        flex: 3;
+        flex-basis: 20%;
+      }
+    }
   }
 }
