--- a/styles/style.css
+++ b/styles/style.css
@@ -375,6 +375,40 @@
   color: #fff;
 }
 
+.badge {
+  font-size: 0.8rem;
+  padding: 0.1rem;
+  text-align: center;
+  margin: 0.3rem;
+  background-color: #f4f4f4;
+  color: #333;
+}
+.badge.badge-primary {
+  background-color: #17a2b8;
+  color: #fff;
+}
+.badge.badge-dark {
+  background-color: #343a40;
+  color: #fff;
+}
+.badge.badge-success {
+  background-color: #28a745;
+  color: #fff;
+}
+.badge.badge-danger {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.table th,
+.table td {
+  padding: 1rem;
+  text-align: left;
+}
+.table th {
+  background-color: #f4f4f4;
+}
+
 .dark-overlay {
   height: 100%;
   width: 100%;
@@ -537,6 +571,27 @@ img {
 .profile-grid .profile-edu {
   grid-area: edu;
 }
+.profile-grid .profile-exp > div,
+.profile-grid .profile-edu > div {
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: #ccc 1px dotted;
+}
+.profile-grid .profile-exp > div:last-child,
+.profile-grid .profile-edu > div:last-child {
+  border: none;
+}
 .profile-grid .profile-github {
   grid-area: github;
+}
+.profile-grid .profile-github .repo {
+  display: flex;
+}
+.profile-grid .profile-github .repo > div:first-child {
+  flex: 7;
+  flex-basis: 70%;
+}
+.profile-grid .profile-github .repo > div:last-child {
+  flex: 3;
+  flex-basis: 20%;
 }/*# sourceMappingURL=style.css.map */
